@@ -2,6 +2,8 @@
 v2.0.1-git
 ----------
 
+[jan] Add missing optional dependency on Horde_ElasticSearch.
+[jan] Catch exceptions from Horde_ElasticSearch.
 
 
 ------
